# piscine-python

python00/ex00/: Hello.py
python00/ex01/: format_ft_time.py
python00/ex02/: find_ft_type.py
python00/ex03/: NULL_not_found.py
python00/ex04/: whatis.py
python00/ex05/: building.py
python00/ex06/: filterstring.py  ft_filter.py
python00/ex07/: sos.py
python00/ex08/: Loading.py  tester.py
python00/ex09/: LICENCE  pyproject.toml
python00/ex09/src/ft_package/: count_in_list.py
python01/ex00/: give_bmi.py
