[build-system]
requires = [
  "setuptools>=64",
  "wheel",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project]
name = "ft_package"
dynamic = ["version"]
description = "A sample test package"
authors = [{ name = "nbled" }, { email = "nbled@42.fr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/42nbled"
